JFUI-2226 - Fix the z-index of toast notification
Changed z-index regarding JFUI-2117 and due to request.

--- a/src/assets/stylesheets/general/toaster.less
+++ b/src/assets/stylesheets/general/toaster.less
@@ -45,7 +45,7 @@
 
 .toasted-container {
   position: fixed;
-  z-index: 999999;
+  z-index: 9999999;
   pointer-events: auto;
   padding: 0;
   font-weight: 400;
